<resources>
    <string name="app_name">tabMine</string>
    <string name="please_login">请登录</string>
    <string name="sign_in">签到</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="plase_phone_number">请输入手机号码</string>
    <string name="plase_password">请输入密码</string>
    <string name="forget_pasword">忘记密码</string>
    <string name="phone_number_register">手机号注册</string>
    <string name="the_three_parties_login">使用第三方登录</string>
    <string name="login">登录</string>
    <string name="singup">注册</string>
    <string name="get_phone_code">获取验证码</string>
    <string name="plase_phone_code">请输入验证码</string>
    <string name="consent">同意</string>
    <string name="consent_password">确认密码</string>
    <string name="login_success">登录成功</string>
    <string name="plase_success_phone_number">请输入正确的手机号</string>
    <string name="setting">设置</string>
    <string name="exit_login">退出登录</string>
    <string name="head_photo">头像</string>
    <string name="phone">手机</string>
    <string name="number">账号</string>
    <string name="name">昵称</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="save_setting">保存设置</string>
    <string name="shop_cart">购物车</string>
</resources>
