<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/delegate_user_data_photo_rlayout"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/head_photo"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_next_set_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back_right" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/delegate_user_head_photo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toStartOf="@id/img_next_set_person"
                    android:layout_toLeftOf="@id/img_next_set_person" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/delegate_user_data_phone_rlayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/delegate_user_data_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawableEnd="@drawable/back_right"
                    android:drawableRight="@drawable/back_right"
                    android:drawablePadding="10dp"
                    android:text=""
                    android:textColor="#999999"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/delegate_user_data_number_rlayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/delegate_user_data_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawableEnd="@drawable/back_right"
                    android:drawableRight="@drawable/back_right"
                    android:drawablePadding="10dp"
                    android:text=""
                    android:textColor="#999999"
                    android:textSize="14sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/delegate_user_data_name_rlayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/delegate_user_data_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:background="@null"
                    android:hint="请完善昵称"
                    android:textColor="#999999"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText,RelativeOverlap" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/delegate_user_data_sex_rlayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:padding="15dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    tools:ignore="RelativeOverlap,RtlHardcoded">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/delegate_user_data_man"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:button="@null"
                        android:drawableStart="@drawable/bg_check_box_green"
                        android:drawableLeft="@drawable/bg_check_box_green"
                        android:drawablePadding="8dp"
                        android:text="@string/man" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/delegate_user_data_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_marginLeft="40dp"
                        android:button="@null"
                        android:drawableStart="@drawable/bg_check_box_green"
                        android:drawableLeft="@drawable/bg_check_box_green"
                        android:drawablePadding="8dp"
                        android:text="@string/woman" />
                </RadioGroup>
            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delegate_user_data_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="120dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_back_red"
                android:text="@string/save_setting"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>